Dark Mode: Improve colors of workboard cards of resolved tasks
Summary:
Make the color of closed cards on a workboard not be based on a white variable; also replace the hardcoded border color value with a variable.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Go to a project workboard which has both standard columns and milestone columns, and has closed and open tasks
* Look at the rendering of closed cards
* Do the same in standard color mode (as this patch also changes colors there!)

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: mainframe98, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26851

--- a/webroot/rsrc/css/phui/workboards/phui-workcard.css
+++ b/webroot/rsrc/css/phui/workboards/phui-workcard.css
@@ -43,7 +43,7 @@
 }
 
 .phui-oi-disabled.phui-workcard {
-  background-color: rgba({$alphawhite},.67);
+  background: {$workboard-column-disabled-card};
 }
 
 .phui-oi-disabled.phui-workcard .phui-oi-link {
